[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/TSUpdated.png" type="Texture" id=1]
[ext_resource path="res://Sprites/C#Updated.png" type="Texture" id=2]
[ext_resource path="res://Sprites/JSUpdated.png" type="Texture" id=3]
[ext_resource path="res://Sprites/cppUpdated.png" type="Texture" id=4]
[ext_resource path="res://Sprites/PythonUpdated.png" type="Texture" id=5]
[ext_resource path="res://Sprites/RustUpdated.png" type="Texture" id=6]
[ext_resource path="res://Sprites/JavaUpdated.png" type="Texture" id=7]
[ext_resource path="res://Input Theme.tres" type="Theme" id=8]
[ext_resource path="res://Title Theme.tres" type="Theme" id=9]
[ext_resource path="res://Spacer.tres" type="Theme" id=10]
[ext_resource path="res://Too Low Theme.tres" type="Theme" id=11]
[ext_resource path="res://Scripts/SlotMachine.gd" type="Script" id=12]
[ext_resource path="res://Too High Theme.tres" type="Theme" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1064.0
margin_bottom = 77.0
theme = ExtResource( 9 )
text = "Slot Machine"
align = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 81.0
margin_right = 1064.0
margin_bottom = 120.0
theme = ExtResource( 8 )
text = "3 in a Row: $500 | 2 in a Row: $100"
align = 1

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 1064.0
margin_bottom = 163.0
theme = ExtResource( 8 )
text = "$50 to play"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0

[node name="FirstSprite" type="AnimatedSprite" parent="HBoxContainer"]
position = Vector2( 280, 265 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
frame = 3
speed_scale = 1.5
playing = true

[node name="ThirdSprite" type="AnimatedSprite" parent="HBoxContainer"]
position = Vector2( 740, 265 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
frame = 3
speed_scale = 1.5
playing = true

[node name="SecondSprite" type="AnimatedSprite" parent="HBoxContainer"]
position = Vector2( 510, 265 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
frame = 3
speed_scale = 1.5
playing = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchor_top = 0.623
anchor_right = 1.0
anchor_bottom = 0.72
alignment = 1

[node name="FirstButton" type="Button" parent="HBoxContainer2"]
margin_left = 231.0
margin_right = 333.0
margin_bottom = 58.0
theme = ExtResource( 8 )
text = "STOP!"

[node name="Label" type="Label" parent="HBoxContainer2"]
margin_left = 337.0
margin_top = 22.0
margin_right = 457.0
margin_bottom = 35.0
theme = ExtResource( 10 )
text = "                    "

[node name="SecondButton" type="Button" parent="HBoxContainer2"]
margin_left = 461.0
margin_right = 563.0
margin_bottom = 58.0
theme = ExtResource( 8 )
text = "STOP!"

[node name="Label2" type="Label" parent="HBoxContainer2"]
margin_left = 567.0
margin_top = 22.0
margin_right = 687.0
margin_bottom = 35.0
theme = ExtResource( 10 )
text = "                    "

[node name="ThirdButton" type="Button" parent="HBoxContainer2"]
margin_left = 691.0
margin_right = 793.0
margin_bottom = 58.0
theme = ExtResource( 8 )
text = "STOP!"

[node name="MoneyCountPositive" type="Label" parent="."]
visible = false
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 13 )
text = "You have $300"
align = 1

[node name="MoneyCountNegative" type="Label" parent="."]
visible = false
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 11 )
text = "You have $300"
align = 1

[node name="MoneyCountNeutral" type="Label" parent="."]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 9 )
text = "You have $300"
align = 1

[node name="RerollOrExit" type="Label" parent="."]
anchor_top = 0.919
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 8 )
text = "Press Esc to Reroll"
align = 1

[connection signal="pressed" from="HBoxContainer2/FirstButton" to="." method="_on_FirstButton_pressed"]
[connection signal="pressed" from="HBoxContainer2/SecondButton" to="." method="_on_SecondButton_pressed"]
[connection signal="pressed" from="HBoxContainer2/ThirdButton" to="." method="_on_ThirdButton_pressed"]
